--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                 <h2 class="mt-1 mb-5 display-4">Dare to <span class="dark">Descend</span></h2>
 
-                <a class="butto display-6" href="home.html" role="button">Home</a>
+                <a class="butto display-6" href="index.html" role="button">Home</a>
                 <a class="butto display-6" href="author.html" role="button">Author</a>
                 <a class="butto display-6" href="content.html" role="button">Content</a>
                 <a class="butto display-6" href="shop.html" role="button">Shop</a>
@@ -124,7 +124,7 @@
 
                 <h2 class="mt-1 mb-5 display-4">Dare to <span class="dark">Descend</span></h2>
 
-                <a class="butto display-6" href="home.html" role="button">Home</a>
+                <a class="butto display-6" href="index.html" role="button">Home</a>
                 <a class="butto display-6" href="author.html" role="button">Author</a>
                 <a class="butto display-6" href="content.html" role="button">Content</a>
                 <a class="butto display-6" href="shop.html" role="button">Shop</a>
