--- a/content.html
+++ b/content.html
@@ -195,7 +195,7 @@
     </div>
 
     <!-- 
-            JavaScript required by some Bootstrap Components.
+            JavaScript is required by some Bootstrap Components.
             Uncomment if needed. See the Bootstrap documentation.
         -->
     <script src="js/bootstrap.min.js"></script>
